@@ -107,6 +107,7 @@ lib/nokogiri/xml/xpath/syntax_error.rb
 lib/nokogiri/xml/xpath_context.rb
 lib/nokogiri/xslt.rb
 lib/nokogiri/xslt/stylesheet.rb
+lib/xsd/xmlparser/nokogiri.rb
 tasks/test.rb
 test/css/test_nthiness.rb
 test/css/test_parser.rb
